添加了web客户端, rabbitMQ通信, 目前vue前端可看到一张最新的图谱

--- a/PumpDiagnosticsSystemV2/PumpDiagnosticsSystem/PumpDiagnosticsSystem.csproj
+++ b/PumpDiagnosticsSystemV2/PumpDiagnosticsSystem/PumpDiagnosticsSystem.csproj
@@ -104,7 +104,7 @@
     <Compile Include="Business\DiagnoseController.cs" />
     <Compile Include="Business\DiagnoseReportController.cs" />
     <Compile Include="Business\MainController.cs" />
-    <Compile Include="Business\MessageProducer.cs" />
+    <Compile Include="Business\SpectrumMessenger.cs" />
     <Compile Include="Core\Parser\EasyParser.cs" />
     <Compile Include="Core\Spectrum\SpectrumAnalyser.cs" />
     <Compile Include="Core\Constructor\LogicConstructor.cs" />
