--- a/PumpDiagnosticsSystemV2/PumpDiagnosticsSystem/App.config
+++ b/PumpDiagnosticsSystemV2/PumpDiagnosticsSystem/App.config
@@ -7,7 +7,7 @@
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <RedisConfig WriteServerList="192.168.0.9:6379" ReadServerList="192.168.0.9:6379" MaxWritePoolSize="60" MaxReadPoolSize="60" AutoStart="true" LocalCacheTime="180" RecordeLog="false"></RedisConfig>
   <connectionStrings>
-    <add name="PPSysDbContext" providerName="System.Data.SqlClient" connectionString="data source=.;initial catalog=PumpSystemV2.0_171019_th_2;persist security info=True;user id=sa;password=123456;MultipleActiveResultSets=True" />
+    <add name="PPSysDbContext" providerName="System.Data.SqlClient" connectionString="data source=.;initial catalog=PumpSystemV2.0_171030_th_2_test;persist security info=True;user id=sa;password=123456;MultipleActiveResultSets=True" />
     <add name="PYWSDbContext" providerName="System.Data.SqlClient" connectionString="data source=192.168.0.9;initial catalog=PumpVibraDB-UI;persist security info=True;user id=sa;password=123.net;MultipleActiveResultSets=True" />
     <!--    <add name="PumpVibrationV2.DAL.UnitOfWork" providerName="System.Data.SqlClient" connectionString="data source=192.168.0.9,4311;initial catalog=PumpVibraDB-ZSX;persist security info=True;user id=sa;password=123.net;MultipleActiveResultSets=True"/>-->
   </connectionStrings>
