添加了正版验证和注册模块, 添加了注册机,客户端, 原控制台改为类库

--- a/PumpDiagnosticsSystemV2/PumpDiagnosticsSystem.App/App.config
+++ b/PumpDiagnosticsSystemV2/PumpDiagnosticsSystem.App/App.config
@@ -1,6 +1,63 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-    </startup>
+  <configSections>
+    <section name="RedisConfig" type="RedisDemo.Redis.RedisConfigInfo,PumpDiagnosticsSystem" />
+
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+  <RedisConfig WriteServerList="192.168.0.9:6379" ReadServerList="192.168.0.9:6379" MaxWritePoolSize="60" MaxReadPoolSize="60" AutoStart="true" LocalCacheTime="180" RecordeLog="false"></RedisConfig>
+  <connectionStrings>
+    <add name="PPSysDbContext" providerName="System.Data.SqlClient" connectionString="data source=.;initial catalog=PumpSystemV2.1.2;persist security info=True;user id=sa;password=123456;MultipleActiveResultSets=True" />
+    <add name="PYWSDbContext" providerName="System.Data.SqlClient" connectionString="data source=192.168.0.9;initial catalog=PumpVibraDB-UI;persist security info=True;user id=sa;password=123.net;MultipleActiveResultSets=True" />
+    <!--    <add name="PumpVibrationV2.DAL.UnitOfWork" providerName="System.Data.SqlClient" connectionString="data source=192.168.0.9,4311;initial catalog=PumpVibraDB-ZSX;persist security info=True;user id=sa;password=123.net;MultipleActiveResultSets=True"/>-->
+  </connectionStrings>
+  <appSettings>
+    <add key="PSCODE" value="THSC" />
+    <add key="PSGUID" value="2D0AA667-F249-42F3-94BB-77B6BFEE7752" />
+    <!--<add key="PSCODE" value="ZBSC" />
+    <add key="PSGUID" value="1C0989D1-999A-41EC-8118-8059B519AB3C" />-->
+
+    <!--采集时间间隔：秒-->
+    <add key="SampleInv" value="2" />
+
+    <!--判据总分档数.
+    默认分3档，表示最大可用分档为1,2,3
+    可选用2档：表示最大可用分档为2,3-->
+    <add key="GradeCount" value="3" />
+
+    <!--判据判为通过的分档.
+    默认全部:"1,2,3"(用逗号隔开) 一般: 3 或 2,3 或 1,2,3, 
+    如:
+    设置2,3则1档不显示在结果中, 
+    设置3则1,2不显示在结果中-->
+    <add key="ValidGrades" value="1,2,3" />
+
+    <!--采集预设的频宽: 默认1000Hz-->
+    <add key="SpecWidth" value="1000" />
+
+    <!--日志是否显示通知(Inform)级的消息(Warn和Error默认显示)-->
+    <add key="ShowLogInform" value="true" />
+  </appSettings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+  </startup>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.InteropServices.RuntimeInformation" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.1.0" newVersion="4.0.1.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
