--- a/PumpDiagnosticsSystemV2/PumpDiagnosticsSystem/PumpDiagnosticsSystem.csproj
+++ b/PumpDiagnosticsSystemV2/PumpDiagnosticsSystem/PumpDiagnosticsSystem.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{FEF50FCA-D7E9-45C6-A171-D590801F7322}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>PumpDiagnosticsSystem</RootNamespace>
     <AssemblyName>PumpDiagnosticsSystem</AssemblyName>
@@ -33,6 +33,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
@@ -159,6 +162,8 @@
     <Compile Include="Business\MyMongo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Security\MacAddress.cs" />
+    <Compile Include="Security\RegisterOp.cs" />
     <Compile Include="Util\ConsoleToLogHelper.cs" />
     <Compile Include="Util\GUIDExtension.cs" />
     <Compile Include="Util\ListExtensions.cs" />
@@ -175,7 +180,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\muParser.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Datas\Redis\RedisDemo.dll" />
     <Content Include="Datas\Redis\ServiceStack.Common.dll" />
@@ -187,7 +192,7 @@
     <Content Include="Datas\Redis\ServiceStack.Text.dll" />
     <Content Include="Datas\Redis\ServiceStack.Text.xml" />
     <Content Include="Assets\PumpSystemPropertyLib.accdb">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <ItemGroup>
