客户端运行信息简单展示, access中添加bssc常量列 读取泵站信息,现在只要AppConfig里配置PSCode就够了

--- a/PumpDiagnosticsSystemV2/PumpDiagnosticsSystem.App/App.config
+++ b/PumpDiagnosticsSystemV2/PumpDiagnosticsSystem.App/App.config
@@ -14,9 +14,7 @@
   </connectionStrings>
   <appSettings>
     <add key="PSCODE" value="THSC" />
-    <add key="PSGUID" value="2D0AA667-F249-42F3-94BB-77B6BFEE7752" />
-    <!--<add key="PSCODE" value="ZBSC" />
-    <add key="PSGUID" value="1C0989D1-999A-41EC-8118-8059B519AB3C" />-->
+    <!--<add key="PSCODE" value="ZBSC" />-->
 
     <!--采集时间间隔：秒-->
     <add key="SampleInv" value="2" />
