--- a/PumpDiagnosticsSystemV2/PumpDiagnosticsSystem.App/App.config
+++ b/PumpDiagnosticsSystemV2/PumpDiagnosticsSystem.App/App.config
@@ -4,17 +4,18 @@
     <section name="RedisConfig" type="RedisDemo.Redis.RedisConfigInfo,PumpDiagnosticsSystem" />
 
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
   <RedisConfig WriteServerList="192.168.0.9:6379" ReadServerList="192.168.0.9:6379" MaxWritePoolSize="60" MaxReadPoolSize="60" AutoStart="true" LocalCacheTime="180" RecordeLog="false"></RedisConfig>
   <connectionStrings>
     <add name="PPSysDbContext" providerName="System.Data.SqlClient" connectionString="data source=.;initial catalog=PumpSystemV2.1.2;persist security info=True;user id=sa;password=123456;MultipleActiveResultSets=True" />
     <add name="PYWSDbContext" providerName="System.Data.SqlClient" connectionString="data source=192.168.0.9;initial catalog=PumpVibraDB-UI;persist security info=True;user id=sa;password=123.net;MultipleActiveResultSets=True" />
-    <!--    <add name="PumpVibrationV2.DAL.UnitOfWork" providerName="System.Data.SqlClient" connectionString="data source=192.168.0.9,4311;initial catalog=PumpVibraDB-ZSX;persist security info=True;user id=sa;password=123.net;MultipleActiveResultSets=True"/>-->
   </connectionStrings>
   <appSettings>
     <add key="PSCODE" value="THSC" />
-    <!--<add key="PSCODE" value="ZBSC" />-->
+<!--    <add key="PSCODE" value="BSSC" />-->
+<!--    <add key="PSCODE" value="ZBSC" />-->
 
     <!--采集时间间隔：秒-->
     <add key="SampleInv" value="2" />
@@ -30,9 +31,6 @@
     设置2,3则1档不显示在结果中, 
     设置3则1,2不显示在结果中-->
     <add key="ValidGrades" value="1,2,3" />
-
-    <!--采集预设的频宽: 默认1000Hz-->
-    <add key="SpecWidth" value="1000" />
 
     <!--日志是否显示通知(Inform)级的消息(Warn和Error默认显示)-->
     <add key="ShowLogInform" value="true" />
