Access补充措施建议 添加了历史/实时模式 添加了诊断记录统计 初步生成诊断报告

--- a/PumpDiagnosticsSystemV2/PumpDiagnosticsSystem/PumpDiagnosticsSystem.csproj
+++ b/PumpDiagnosticsSystemV2/PumpDiagnosticsSystem/PumpDiagnosticsSystem.csproj
@@ -148,6 +148,8 @@
     <Compile Include="Models\DbEntities\GraphArchive.cs" />
     <Compile Include="Models\Constant.cs" />
     <Compile Include="Models\Components\BaseComponent.cs" />
+    <Compile Include="Models\DbEntities\DiagRecord.cs" />
+    <Compile Include="Models\DbEntities\RunRecord.cs" />
     <Compile Include="Models\DiagnoseResult.cs" />
     <Compile Include="Models\Enums\BearingPos.cs" />
     <Compile Include="Models\Enums\GraphType.cs" />
