频谱图频率宽度和分辨率的算法改为实时读取,不再写入常量表中. 对应修改常量表,判据表. 添加读取判据库等简单的单元测试. 添加可用的频谱可视化数据.

--- a/PumpDiagnosticsSystemV2/PumpDiagnosticsSystem.App/App.config
+++ b/PumpDiagnosticsSystemV2/PumpDiagnosticsSystem.App/App.config
@@ -14,13 +14,14 @@
   </connectionStrings>
   <appSettings>
     <add key="AppVersion" value="2.1.3"/>
-    
+
+<!--    <add key="PSCODE" value="SHIYAN" />-->
     <add key="PSCODE" value="THSC" />
 <!--    <add key="PSCODE" value="BSSC" />-->
 <!--    <add key="PSCODE" value="ZBSC" />-->
 
     <!--采集时间间隔：秒-->
-    <add key="SampleInv" value="2" />
+    <add key="SampleInv" value="10" />
 
     <!--判据总分档数.
     默认分3档，表示最大可用分档为1,2,3
@@ -35,10 +36,10 @@
     <add key="ValidGrades" value="1,2,3" />
 
     <!--日志是否显示通知(Inform)级的消息(Warn和Error默认显示)-->
-    <add key="ShowLogInform" value="false" />
+    <add key="ShowLogInform" value="true" />
 
     <!--诊断模式是否为历史诊断模式， false则为实时诊断模式（用于现场）-->
-    <add key="IsHistoryDiagMode" value="false" />
+    <add key="IsHistoryDiagMode" value="true" />
 
     <!--每天自动生成报告的时间-->
     <add key="ReportBuildTime" value="23:50" />
