--- a/PumpDiagnosticsSystemV2/PumpDiagnosticsSystem.Tests/App.config
+++ b/PumpDiagnosticsSystemV2/PumpDiagnosticsSystem.Tests/App.config
@@ -13,14 +13,36 @@
     <!--    <add name="PumpVibrationV2.DAL.UnitOfWork" providerName="System.Data.SqlClient" connectionString="data source=192.168.0.9,4311;initial catalog=PumpVibraDB-ZSX;persist security info=True;user id=sa;password=123.net;MultipleActiveResultSets=True"/>-->
   </connectionStrings>
   <appSettings>
-    <add key="PSCODE" value="thsc" />
-    <add key="PSGUID" value="2D0AA667-F249-42F3-94BB-77B6BFEE7752" />
+    <add key="AppVersion" value="2.1.3"/>
+
+    <add key="PSCODE" value="SHIYAN" />
+    <!--    <add key="PSCODE" value="THSC" />-->
+    <!--    <add key="PSCODE" value="BSSC" />-->
+    <!--    <add key="PSCODE" value="ZBSC" />-->
 
     <!--采集时间间隔：秒-->
-    <add key="SampleInv" value="30" />
+    <add key="SampleInv" value="2" />
 
-    <!--判据分档数，默认3档，支持2、3档-->
+    <!--判据总分档数.
+    默认分3档，表示最大可用分档为1,2,3
+    可选用2档：表示最大可用分档为2,3-->
     <add key="GradeCount" value="3" />
+
+    <!--判据判为通过的分档.
+    默认全部:"1,2,3"(用逗号隔开) 一般: 3 或 2,3 或 1,2,3, 
+    如:
+    设置2,3则1档不显示在结果中, 
+    设置3则1,2不显示在结果中-->
+    <add key="ValidGrades" value="1,2,3" />
+
+    <!--日志是否显示通知(Inform)级的消息(Warn和Error默认显示)-->
+    <add key="ShowLogInform" value="true" />
+
+    <!--诊断模式是否为历史诊断模式， false则为实时诊断模式（用于现场）-->
+    <add key="IsHistoryDiagMode" value="true" />
+
+    <!--每天自动生成报告的时间-->
+    <add key="ReportBuildTime" value="23:50" />
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
