添加相位相关判据(未添加) 软件添加1倍频相位数据的支持 修改频谱高级分析的算法,判断更加突出的主峰和边频带 修复高级频谱报警频率100%的bug(enum SidePeakGroupType 写错)

--- a/PumpDiagnosticsSystemV2/PumpDiagnosticsSystem/PumpDiagnosticsSystem.csproj
+++ b/PumpDiagnosticsSystemV2/PumpDiagnosticsSystem/PumpDiagnosticsSystem.csproj
@@ -19,7 +19,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;EXTRA</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;!EXTRA</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
