--- a/PumpDiagnosticsSystemV2/PumpDiagnosticsSystem.App/App.config
+++ b/PumpDiagnosticsSystemV2/PumpDiagnosticsSystem.App/App.config
@@ -9,11 +9,11 @@
   </configSections>
   <RedisConfig WriteServerList="192.168.0.9:6379" ReadServerList="192.168.0.9:6379" MaxWritePoolSize="60" MaxReadPoolSize="60" AutoStart="true" LocalCacheTime="180" RecordeLog="false"></RedisConfig>
   <connectionStrings>
-    <add name="PPSysDbContext" providerName="System.Data.SqlClient" connectionString="data source=.;initial catalog=PumpSystemV2.1.3;persist security info=True;user id=sa;password=123456;MultipleActiveResultSets=True" />
+    <add name="PPSysDbContext" providerName="System.Data.SqlClient" connectionString="data source=.;initial catalog=PumpSystemV2.1.4test;persist security info=True;user id=sa;password=123456;MultipleActiveResultSets=True" />
     <add name="PYWSDbContext" providerName="System.Data.SqlClient" connectionString="data source=192.168.0.9;initial catalog=PumpVibraDB-UI;persist security info=True;user id=sa;password=123.net;MultipleActiveResultSets=True" />
   </connectionStrings>
   <appSettings>
-    <add key="AppVersion" value="2.1.3"/>
+    <add key="AppVersion" value="2.1.4"/>
 
 <!--    <add key="PSCODE" value="SHIYAN" />-->
     <add key="PSCODE" value="THSC" />
@@ -21,7 +21,7 @@
 <!--    <add key="PSCODE" value="ZBSC" />-->
 
     <!--采集时间间隔：秒-->
-    <add key="SampleInv" value="10" />
+    <add key="SampleInv" value="5" />
 
     <!--判据总分档数.
     默认分3档，表示最大可用分档为1,2,3
