删除传感器更新时间中的now; 修改诊断报告样式为可动态修改; 增加日志中对上一条记录的判断, 不重复写同样的内容;

--- a/PumpDiagnosticsSystemV2/PumpDiagnosticsSystem.App/App.config
+++ b/PumpDiagnosticsSystemV2/PumpDiagnosticsSystem.App/App.config
@@ -9,14 +9,14 @@
   </configSections>
   <RedisConfig WriteServerList="192.168.0.9:6379" ReadServerList="192.168.0.9:6379" MaxWritePoolSize="60" MaxReadPoolSize="60" AutoStart="true" LocalCacheTime="180" RecordeLog="false"></RedisConfig>
   <connectionStrings>
-    <add name="PPSysDbContext" providerName="System.Data.SqlClient" connectionString="data source=.;initial catalog=PumpSystemV2.1.4test;persist security info=True;user id=sa;password=123456;MultipleActiveResultSets=True" />
+    <add name="PPSysDbContext" providerName="System.Data.SqlClient" connectionString="data source=.;initial catalog=PumpSystemV2.1.4test2;persist security info=True;user id=sa;password=123456;MultipleActiveResultSets=True" />
     <add name="PYWSDbContext" providerName="System.Data.SqlClient" connectionString="data source=192.168.0.9;initial catalog=PumpVibraDB-UI;persist security info=True;user id=sa;password=123.net;MultipleActiveResultSets=True" />
   </connectionStrings>
   <appSettings>
-    <add key="AppVersion" value="2.1.4"/>
+    <add key="AppVersion" value="2.1.4debug"/>
 
-<!--    <add key="PSCODE" value="SHIYAN" />-->
-    <add key="PSCODE" value="THSC" />
+    <add key="PSCODE" value="SHIYAN" />
+    <!--<add key="PSCODE" value="THSC" />-->
 <!--    <add key="PSCODE" value="BSSC" />-->
 <!--    <add key="PSCODE" value="ZBSC" />-->
 
@@ -36,10 +36,10 @@
     <add key="ValidGrades" value="1,2,3" />
 
     <!--日志是否显示通知(Inform)级的消息(Warn和Error默认显示)-->
-    <add key="ShowLogInform" value="true" />
+    <add key="ShowLogInform" value="false" />
 
     <!--诊断模式是否为历史诊断模式， false则为实时诊断模式（用于现场）-->
-    <add key="IsHistoryDiagMode" value="true" />
+    <add key="IsHistoryDiagMode" value="false" />
 
     <!--每天自动生成报告的时间-->
     <add key="ReportBuildTime" value="23:50" />
