整合纳入Redis历史数据写入程序

--- a/PumpDiagnosticsSystemV2/PumpDiagnosticsSystem.App/App.config
+++ b/PumpDiagnosticsSystemV2/PumpDiagnosticsSystem.App/App.config
@@ -9,11 +9,11 @@
   </configSections>
   <RedisConfig WriteServerList="192.168.0.9:6379" ReadServerList="192.168.0.9:6379" MaxWritePoolSize="60" MaxReadPoolSize="60" AutoStart="true" LocalCacheTime="180" RecordeLog="false"></RedisConfig>
   <connectionStrings>
-    <add name="PPSysDbContext" providerName="System.Data.SqlClient" connectionString="data source=.;initial catalog=PumpSystemV2.1.4test2;persist security info=True;user id=sa;password=123456;MultipleActiveResultSets=True" />
+    <add name="PPSysDbContext" providerName="System.Data.SqlClient" connectionString="data source=.;initial catalog=PumpSystemV2.1.4;persist security info=True;user id=sa;password=123456;MultipleActiveResultSets=True" />
     <add name="PYWSDbContext" providerName="System.Data.SqlClient" connectionString="data source=192.168.0.9;initial catalog=PumpVibraDB-UI;persist security info=True;user id=sa;password=123.net;MultipleActiveResultSets=True" />
   </connectionStrings>
   <appSettings>
-    <add key="AppVersion" value="2.1.4debug"/>
+    <add key="AppVersion" value="2.1.4"/>
 
     <add key="PSCODE" value="SHIYAN" />
     <!--<add key="PSCODE" value="THSC" />-->
@@ -21,7 +21,7 @@
 <!--    <add key="PSCODE" value="ZBSC" />-->
 
     <!--采集时间间隔：秒-->
-    <add key="SampleInv" value="5" />
+    <add key="SampleInv" value="2" />
 
     <!--判据总分档数.
     默认分3档，表示最大可用分档为1,2,3
@@ -36,10 +36,10 @@
     <add key="ValidGrades" value="1,2,3" />
 
     <!--日志是否显示通知(Inform)级的消息(Warn和Error默认显示)-->
-    <add key="ShowLogInform" value="false" />
+    <add key="ShowLogInform" value="true" />
 
     <!--诊断模式是否为历史诊断模式， false则为实时诊断模式（用于现场）-->
-    <add key="IsHistoryDiagMode" value="false" />
+    <add key="IsHistoryDiagMode" value="true" />
 
     <!--每天自动生成报告的时间-->
     <add key="ReportBuildTime" value="23:50" />
