Access调整了 松A/松B/轴向螺栓松动 在小概率上的判断 编写了SpecFeature的单元测试，修正了取整时四舍五入的问题。 HDataApp添加了循环次数的设定

--- a/PumpDiagnosticsSystemV2/PumpDiagnosticsSystem.HDataApp/App.config
+++ b/PumpDiagnosticsSystemV2/PumpDiagnosticsSystem.HDataApp/App.config
@@ -16,9 +16,10 @@
     <add key="gateway" value="" />
     <!--th 192.168.18.122 zb 198.186.202.56 bs kong-->
 
-    <add key="Inv" value="2" />
+    <add key="Inv" value="3" />
     <add key="BeginTime" value="2017-12-18 15:20" />
     <add key="EndTime" value="2017-12-18 15:40" />
+    <add key="Loop" value="1" />
 
     <add key="PSCODE" value="SHIYAN" />
     <!--<add key="PSCODE" value="THSC" />-->
