Access添加了压力超高的判断, 频谱常量添加了SPG_SpCount.试验台模拟汽蚀,调试算法(底脚部分加入转速0的判断)和噪声的最小宽度参数. HDataApp修复V3Phase没有值导致读取出错的问题.

--- a/PumpDiagnosticsSystemV2/PumpDiagnosticsSystem.HDataApp/App.config
+++ b/PumpDiagnosticsSystemV2/PumpDiagnosticsSystem.HDataApp/App.config
@@ -13,16 +13,16 @@
   <appSettings>
     <add key="FilePath" value="E:\PublishJiBengUI\XMData\" />
     <add key="AlarmTime" value="120" />
-    <add key="gateway" value="" />
+    <add key="gateway" value="192.168.18.122" />
     <!--th 192.168.18.122 zb 198.186.202.56 bs kong-->
 
     <add key="Inv" value="3" />
-    <add key="BeginTime" value="2017-12-18 15:20" />
-    <add key="EndTime" value="2017-12-18 15:40" />
-    <add key="Loop" value="1" />
+    <add key="BeginTime" value="2017-12-1 00:00" />
+    <add key="EndTime" value="2017-12-19 00:00" />
+    <add key="Loop" value="0" />
 
-    <add key="PSCODE" value="SHIYAN" />
-    <!--<add key="PSCODE" value="THSC" />-->
+    <!--<add key="PSCODE" value="SHIYAN" />-->
+    <add key="PSCODE" value="THSC" />
     <!--<add key="PSCODE" value="BSSC" />-->
     <!--<add key="PSCODE" value="ZBSC" />-->
 
