--- a/PumpDiagnosticsSystemV2/PumpDiagnosticsSystem.App/App.config
+++ b/PumpDiagnosticsSystemV2/PumpDiagnosticsSystem.App/App.config
@@ -9,11 +9,12 @@
   </configSections>
   <RedisConfig WriteServerList="192.168.0.9:6379" ReadServerList="192.168.0.9:6379" MaxWritePoolSize="60" MaxReadPoolSize="60" AutoStart="true" LocalCacheTime="180" RecordeLog="false"></RedisConfig>
   <connectionStrings>
-    <add name="PPSysDbContext" providerName="System.Data.SqlClient" connectionString="data source=.;initial catalog=PumpSystemV2.1.4;persist security info=True;user id=sa;password=123456;MultipleActiveResultSets=True" />
+    <add name="PPSysDbContext" providerName="System.Data.SqlClient" connectionString="data source=.;initial catalog=PumpSystemV2.1.5;persist security info=True;user id=sa;password=123456;MultipleActiveResultSets=True" />
+    <add name="PPSysMySQLDbContext" providerName="System.Data.SqlClient" connectionString="Server=localhost;Database=test;Uid=root;Pwd=root123!@#" />
     <add name="PYWSDbContext" providerName="System.Data.SqlClient" connectionString="data source=192.168.0.9;initial catalog=PumpVibraDB-UI;persist security info=True;user id=sa;password=123.net;MultipleActiveResultSets=True" />
   </connectionStrings>
   <appSettings>
-    <add key="AppVersion" value="2.1.4"/>
+    <add key="AppVersion" value="2.1.5"/>
 
     <add key="PSCODE" value="SHIYAN" />
     <!--<add key="PSCODE" value="THSC" />-->
