--- a/PumpDiagnosticsSystemV2/PumpDiagnosticsSystem.HDataApp/App.config
+++ b/PumpDiagnosticsSystemV2/PumpDiagnosticsSystem.HDataApp/App.config
@@ -11,19 +11,19 @@
   <RedisConfig WriteServerList="192.168.0.9:6379" ReadServerList="192.168.0.9:6379" MaxWritePoolSize="60" MaxReadPoolSize="60" AutoStart="true" LocalCacheTime="180" RecordeLog="false">
   </RedisConfig>
   <appSettings>
-    <add key="FilePath" value="E:\PublishJiBengUI\XMData\" />
+    <add key="FilePath" value="\\192.168.0.9\XMData\" />
     <add key="AlarmTime" value="120" />
-    <add key="gateway" value="192.168.18.122" />
+    <add key="gateway" value="" />
     <!--th 192.168.18.122 zb 198.186.202.56 bs kong-->
 
     <add key="Inv" value="3" />
-    <add key="BeginTime" value="2017-12-1 00:00" />
-    <add key="EndTime" value="2017-12-19 00:00" />
-    <add key="Loop" value="0" />
+    <add key="BeginTime" value="2018-1-9 14:00" />
+    <add key="EndTime" value="2018-1-9 16:00" />
+    <add key="Loop" value="10" />
 
-    <!--<add key="PSCODE" value="SHIYAN" />-->
-    <add key="PSCODE" value="THSC" />
-    <!--<add key="PSCODE" value="BSSC" />-->
+    <add key="PSCODE" value="SHIYAN" />
+<!--    <add key="PSCODE" value="THSC" />-->
+<!--    <add key="PSCODE" value="BSSC" />-->
     <!--<add key="PSCODE" value="ZBSC" />-->
 
   </appSettings>
