添加FeatureInNoise的测试, 汽蚀调试通过 HDataApp去掉空数据时的等待时间 access 40倍工频改成20倍, 调整了报警值比例0.4->0.3 App加入了转速的显示和风扇动画

--- a/PumpDiagnosticsSystemV2/PumpDiagnosticsSystem.App/PumpDiagnosticsSystem.App.csproj
+++ b/PumpDiagnosticsSystemV2/PumpDiagnosticsSystem.App/PumpDiagnosticsSystem.App.csproj
@@ -155,6 +155,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="fan.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
     <Content Include="logoicon.ico">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
